--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "swagger": "^0.7.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "cors": "^2.8.5"
   }
 }
