--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsdoc": "^4.0.2",
     "mongoose": "^7.4.5",
@@ -19,7 +20,6 @@
     "swagger": "^0.7.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "validator": "^13.11.0",
-    "cors": "^2.8.5"
+    "validator": "^13.11.0"
   }
 }
